Fix bug #62651: source level BC break

Break for C++ extensions that don't wrap the includes of PHP libraries
in extern "C" {.